fix button text alignment in chrome

--- a/src/frontend/src/audio-player.css
+++ b/src/frontend/src/audio-player.css
@@ -17,6 +17,7 @@
     box-shadow: 0 .75rem .5rem -.5rem hsl(57, 0%, 37%);
     cursor: pointer;
     transition: all .5s;
+    align-items: center;
 }
 
 .controls button:hover,
